Mon Jan 10 22:48:46 2000  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Whee. Now feh can load images from urls.
	* Specify an image starting with http:// and feh will use wget to
	  load the image, store it in a temporary file and view it.
	* You must have wget installed for this to work.
	* I have some optimisations to add, the image is currently not
	  cached, so if you have http files in a slideshow, they will reload
	  each time you get to them ;) I'll do this soon.

Sat Jan  8 18:44:05 2000  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Finally got around to adding timers to feh. Now there is a new
	  option, -D, or --slideshow-delay NUM. NUM is the time in seconds
	  between changing slides for you. There is a new test to
	  demonstrate this option.
	* The timer will pause while you zoom, and will be reset if you
	  change slides yourself.
	* The timers code is loosely based on raster's epplet timer
	  code, 'cos its cool. No need to re-invent the wheel ;)

Mon Jan  3 18:29:46 2000  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Okay. feh is now capable of some minor touch-ups. Nothing major,
	and no image saving yet, but it tests the selection and
	modification code.
	* We're not writing a full-blown editor here... The idea is to
	browse through your images, select one, make minor changes if you
	want, then set it as your desktop background.
	* To test, toggle the various modes and use the left mouse button
	to use 'em.
	* 'c' - crop image to rectangle
	* 'o' - increase contrast of rectangle
	* 'b' - increase brightness of rectangle
	* 'g' - increase gamma of rectangle
	* 'Escape' - exit modification mode.
	* I'll leave the rest of the modification stuff to Andrew ;-) I
	guess maybe we should have some persistant rectangle selections,
	but I don't want to go too far.

Sat Jan  1 22:25:49 2000  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* I prefer LineOnOffDash drawing more for selections :)
